fix(ui): add more number to z-index

--- a/Polyglot.safariextension/injected.css
+++ b/Polyglot.safariextension/injected.css
@@ -9,7 +9,7 @@
   margin-right: 20px !important;
   background-color: #efefef !important;
   border-radius: 6px !important;
-  z-index: 9999 !important;
+  z-index: 99999 !important;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2) !important;
   transform: scale(0) !important;
   transform-origin: 0 0 !important;
